--- a/shatterproofing_code/modeling_and_outputs.ipynb
+++ b/shatterproofing_code/modeling_and_outputs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy.stats as sc\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from options_wrangler import OptionsWrangler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +33,7 @@
     "uso = pd.read_csv(d_loc + 'uso.csv')\n",
     "uso['trade_date'] = pd.to_datetime(uso['trade_date'])\n",
     "uso['expirDate'] = pd.to_datetime(uso['expirDate'])\n",
+    "uso_stock = uso[['trade_date', 'stkPx']].groupby('trade_date').agg(np.mean)\n",
     "monthly_expos = expos[expos.expo_type == 'Monthly']\n",
     "max_date_back = max([\n",
     "    min(uso_stock.index), \n",
@@ -44,28 +46,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(        stkPx trade_date  expirDate  strike  cOi    pOi  cValue  pValue  \\\n",
-       " 210315  42.07 2010-04-05 2010-04-16    18.0   50   1043   24.07     0.0   \n",
-       " 210316  42.07 2010-04-05 2010-04-16    19.0   50   2407   23.07     0.0   \n",
-       " 210317  42.07 2010-04-05 2010-04-16    20.0   10   2292   22.07     0.0   \n",
-       " 210318  42.07 2010-04-05 2010-04-16    21.0    0  25400   21.07     0.0   \n",
-       " 210319  42.07 2010-04-05 2010-04-16    22.0    0  21096   20.07     0.0   \n",
+       " 210074  41.24 2010-04-01 2010-04-16    18.0   50   1040   23.24     0.0   \n",
+       " 210075  41.24 2010-04-01 2010-04-16    19.0   50   2407   22.24     0.0   \n",
+       " 210076  41.24 2010-04-01 2010-04-16    20.0   10   2292   21.24     0.0   \n",
+       " 210077  41.24 2010-04-01 2010-04-16    21.0    0  25400   20.24     0.0   \n",
+       " 210078  41.24 2010-04-01 2010-04-16    22.0    0  21096   19.24     0.0   \n",
        " \n",
        "         delta  gamma  \n",
-       " 210315    1.0    0.0  \n",
-       " 210316    1.0    0.0  \n",
-       " 210317    1.0    0.0  \n",
-       " 210318    1.0    0.0  \n",
-       " 210319    1.0    0.0  , Timestamp('2010-04-01 00:00:00'))"
+       " 210074    1.0    0.0  \n",
+       " 210075    1.0    0.0  \n",
+       " 210076    1.0    0.0  \n",
+       " 210077    1.0    0.0  \n",
+       " 210078    1.0    0.0  , Timestamp('2010-03-31 00:00:00'))"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +86,6 @@
     "# putting into one frame\n",
     "# pd.merge\n",
     "# pd.shift (for advancing)\n",
-    "uso_stock = uso[['trade_date', 'stkPx']].groupby('trade_date').agg(np.mean)\n",
     "uso_expos = monthly_expos.merge(uso, left_on='date', right_on='expirDate')\n",
     "uso_expos = uso_expos.drop(columns=['date', 'expo_type'])\n",
     "uso_trading = monthly_expos.merge(uso_expos, left_on='date', right_on='trade_date')\n",
@@ -93,18 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(numpy.datetime64('2010-12-17T00:00:00.000000000'),\n",
-       " numpy.datetime64('2010-04-05T00:00:00.000000000'),\n",
+       " numpy.datetime64('2010-04-01T00:00:00.000000000'),\n",
        " numpy.datetime64('2007-01-20T00:00:00.000000000'))"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,35 +414,311 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-132-56e446ddd9c3>, line 5)",
+     "evalue": "unexpected indent (<ipython-input-4-dbb889a63519>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-132-56e446ddd9c3>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    gOption(delta, months_out=None, weeks_out=None, trade_date=None)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-dbb889a63519>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    Option((delta or strike) and trade_date and expo, months_out=None, weeks_out=None,)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
     "wrangler = OptionsWrangler(data=options_data)\n",
-    "## HAS A SUBCLASS: OPTION\n",
-    "    ### it's essentially a row of a dataframe, except it grabs the daily data for itself \n",
-    "    ### it's the string of the bucket, so to speak\n",
-    "    Option((delta or strike) and trade_date and expo, months_out=None, weeks_out=None,)\n",
-    "# returns the the expiration for an option\n",
+    "# returns the expiration chain for an option, either for a particular month or for a full chain\n",
     "wrangler.get_expo_chain(expo_chain, trade_date) # throws not valid expo, not in dataset (before, after)\n",
-    "# returns the the expiration for an option\n",
-    "wrangler.get_option_expo(option)\n",
-    "wrangler.get_option_history(strike, expo, dtarting_trade_date) # throws no such option, not in dataset\n",
+    "# returns the daily data for an option\n",
+    "wrangler.get_option_history(strike, expo, starting_trade_date) # throws no such option, not in dataset\n",
+    "# gets the histoprical chains for a month of options\n",
     "wrangler.get_days_historical_chain() # throws not in data set\n",
-    "wrangler.get_imp_vol(expo, trade_date, strike)\n",
-    "wrangler.get_call_value(expo, trade_date, strike) # throws not in dataset \n",
-    "wrangler.get_put_value(expo, trade_date, strike) # throws not in dataset\n",
-    "wrangler.get_market(expo, trade_date, strike) # throws not in dataset "
+    "# gets the implied volatility for trade date and month, returns the smile data\n",
+    "wrangler.get_imp_vol(expo, trade_date)\n",
+    "# gets the value of a call at a particular strike\n",
+    "wrangler.get_option_value(expo, trade_date, strike, side) # throws not in dataset \n",
+    "# gets the market, with sizes for a particular option\n",
+    "wrangler.get_option_market(expo, trade_date, strike, side) # throws not in dataset "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uso = pd.read_csv(d_loc + 'uso.csv')\n",
+    "uso['trade_date'] = pd.to_datetime(uso['trade_date'])\n",
+    "uso['expirDate'] = pd.to_datetime(uso['expirDate'])\n",
+    "uso_set = uso.set_index(['trade_date', 'expirDate', 'strike']);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uso_wrangler = OptionsWrangler(data=d_loc + 'uso.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trade_date = pd.to_datetime('2020-02-14')\n",
+    "expo = pd.to_datetime('2020-04-17')\n",
+    "strike = 12.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25 ms ± 174 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit uso.query(f\"trade_date == '2020-02-14' and expirDate == '2020-04-17' and strike == 12.0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uso.reset_index();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.4 ms ± 266 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit uso.query(f\"trade_date == '2020-02-14' and expirDate == '2020-04-17' and strike == 12.0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32.3 ms ± 200 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "    %timeit uso.query(\"'2020-02-14' < trade_date < '2020-03-15' and expirDate == '2020-04-17' and strike == 12.0 \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = uso.query(\"'2019-11-20' < trade_date < '2020-03-15' and expirDate == '2020-04-17' and strike == 8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68.2 ms ± 585 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit uso_set.query(\"'2018-11-20' < trade_date < '2020-03-15' and expirDate == '2020-04-17' and strike == 10.0 \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32.2 ms ± 449 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit uso.query(\"'2018-11-20' < trade_date < '2020-03-15' and expirDate == '2020-04-17' and strike == 10.0 \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>strike</th>\n",
+       "      <th>stkPx</th>\n",
+       "      <th>cOi</th>\n",
+       "      <th>pOi</th>\n",
+       "      <th>cValue</th>\n",
+       "      <th>pValue</th>\n",
+       "      <th>delta</th>\n",
+       "      <th>gamma</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>trade_date</th>\n",
+       "      <th>expirDate</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2020-02-14</th>\n",
+       "      <th>2020-04-17</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.94</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.94</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-17</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>10.94</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.95</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-17</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>10.94</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.95</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-17</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>10.94</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.95</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-17</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>10.94</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5.96</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       strike  stkPx  cOi  pOi  cValue  pValue  delta  gamma\n",
+       "trade_date expirDate                                                        \n",
+       "2020-02-14 2020-04-17     1.0  10.94    2    0    9.94     0.0    1.0    0.0\n",
+       "           2020-04-17     2.0  10.94    0    0    8.95     0.0    1.0    0.0\n",
+       "           2020-04-17     3.0  10.94    0    5    7.95     0.0    1.0    0.0\n",
+       "           2020-04-17     4.0  10.94    0    0    6.95     0.0    1.0    0.0\n",
+       "           2020-04-17     5.0  10.94    3    4    5.96     0.0    1.0    0.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uso_wrangler.get_expo_chain('2020-02-14', '2020-04-17').head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
