final clean of images and only relevant csv data

--- a/shatterproofing_code/risk.ipynb
+++ b/shatterproofing_code/risk.ipynb
@@ -40,13 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 582,
+   "execution_count": 602,
    "metadata": {},
    "outputs": [],
    "source": [
     "d = 'csv_data/'\n",
-    "labor_force = pd.read_csv(d + 'civilian_labor_force.csv')\n",
-    "labor_force['DATE'] = pd.to_datetime(labor_force['DATE'])\n",
     "\n",
     "df1 = pd.read_csv(d+ 'midland_employee_total_count.csv')\n",
     "df1 = df1.set_index(['Year']).stack().reset_index()\n",
@@ -102,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 583,
+   "execution_count": 603,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +173,7 @@
        "4         0.035 1948-05-01  National"
       ]
      },
-     "execution_count": 583,
+     "execution_count": 603,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 584,
+   "execution_count": 604,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +258,7 @@
        "4 2008-05-01     68911.0"
       ]
      },
-     "execution_count": 584,
+     "execution_count": 604,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 605,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +343,7 @@
        "4 2009-05-01     14700.0"
       ]
      },
-     "execution_count": 585,
+     "execution_count": 605,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 606,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +434,7 @@
        "4 2009-05-01  0.057  Midland"
       ]
      },
-     "execution_count": 586,
+     "execution_count": 606,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 607,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +560,7 @@
        "2010-09-01  75.02  73.91  75.14  73.11  340.17K    1.50%       75.366"
       ]
      },
-     "execution_count": 587,
+     "execution_count": 607,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 588,
+   "execution_count": 608,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +743,7 @@
        "4         0.095  National  "
       ]
      },
-     "execution_count": 588,
+     "execution_count": 608,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 609,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 610,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 611,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 612,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 613,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +856,7 @@
        "(94855.0, 82375.0, 29700.0, 22700.0)"
       ]
      },
-     "execution_count": 593,
+     "execution_count": 613,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 614,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +877,7 @@
        "(106.75, 29.88)"
       ]
      },
-     "execution_count": 594,
+     "execution_count": 614,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 615,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 596,
+   "execution_count": 616,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 597,
+   "execution_count": 617,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 618,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 619,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 620,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 621,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1088,7 @@
        "0.8399348923957319"
       ]
      },
-     "execution_count": 601,
+     "execution_count": 621,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,21 +1101,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": 622,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0457"
+       "0.0429"
       ]
      },
-     "execution_count": 581,
+     "execution_count": 622,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# monte carlo\n",
     "array_of_samples = []\n",
     "for i in range(10000):\n",
     "    monte_carlo_data = np.zeros_like(mp.Price)\n",
@@ -1143,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 623,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 624,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1176,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.832\n",
       "Method:                 Least Squares   F-statistic:                     240.9\n",
       "Date:                Mon, 11 May 2020   Prob (F-statistic):           1.75e-55\n",
-      "Time:                        00:04:41   Log-Likelihood:                 525.82\n",
+      "Time:                        16:25:32   Log-Likelihood:                 525.82\n",
       "No. Observations:                 146   AIC:                            -1044.\n",
       "Df Residuals:                     142   BIC:                            -1032.\n",
       "Df Model:                           3                                         \n",
@@ -1212,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 625,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1220,7 @@
        "'<table style=\"text-align:center\"><tr><td colspan=\"2\" style=\"border-bottom: 1px solid black\"></td></tr><tr><td style=\"text-align:left\"></td><td colspan=\"1\"><em>Dependent variable:</em></td></tr><tr><td style=\"text-align:left\"></td><tr><td style=\"text-align:left\"></td><td>(1)</td></tr><tr><td colspan=\"2\" style=\"border-bottom: 1px solid black\"></td></tr><tr><td style=\"text-align:left\">Constant</td><td>0.072<sup>***</sup></td></tr><tr><td style=\"text-align:left\"></td><td>(0.001)</td></tr><tr><td style=\"text-align:left\">Post</td><td>-0.024<sup>***</sup></td></tr><tr><td style=\"text-align:left\"></td><td>(0.002)</td></tr><tr><td style=\"text-align:left\">PostTreatment</td><td>0.025<sup>***</sup></td></tr><tr><td style=\"text-align:left\"></td><td>(0.002)</td></tr><tr><td style=\"text-align:left\">Treatment</td><td>-0.037<sup>***</sup></td></tr><tr><td style=\"text-align:left\"></td><td>(0.002)</td></tr><td colspan=\"2\" style=\"border-bottom: 1px solid black\"></td></tr><tr><td style=\"text-align: left\">Observations</td><td>146.0</td></tr><tr><td style=\"text-align: left\">R<sup>2</sup></td><td>0.836</td></tr><tr><td style=\"text-align: left\">Adjusted R<sup>2</sup></td><td>0.832</td></tr><tr><td style=\"text-align: left\">Residual Std. Error</td><td>0.007(df = 142.0)</td></tr><tr><td style=\"text-align: left\">F Statistic</td><td>240.852<sup>***</sup>(df = 3.0; 142.0)</td></tr><tr><td colspan=\"2\" style=\"border-bottom: 1px solid black\"></td></tr><tr><td style=\"text-align: left\">Note:</td>\\n <td colspan=\"1\" style=\"text-align: right\">\\n  <sup>*</sup>p&lt;0.1;\\n  <sup>**</sup>p&lt;0.05;\\n  <sup>***</sup>p&lt;0.01\\n </td></tr></table>'"
       ]
      },
-     "execution_count": 495,
+     "execution_count": 625,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1237,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 626,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1266,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 627,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1278,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.078\n",
       "Method:                 Least Squares   F-statistic:                     5.085\n",
       "Date:                Mon, 11 May 2020   Prob (F-statistic):            0.00225\n",
-      "Time:                        00:04:54   Log-Likelihood:                -75.808\n",
+      "Time:                        16:25:33   Log-Likelihood:                -75.808\n",
       "No. Observations:                 146   AIC:                             159.6\n",
       "Df Residuals:                     142   BIC:                             171.5\n",
       "Df Model:                           3                                         \n",
@@ -1310,13 +1309,6 @@
     "results_employ = model_employ.fit()\n",
     "print(results_employ.summary())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
